// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commentTokenizer should tokenize a bounded comment 1`] = `
{
  "endIdx": 39,
  "startIdx": 0,
  "type": "Comment",
}
`;

exports[`commentTokenizer should tokenize a comment-to-end-of-line 1`] = `
{
  "endIdx": 14,
  "startIdx": 0,
  "type": "Comment",
}
`;

exports[`commentTokenizer should tokenize a comment-to-end-of-source 1`] = `
{
  "endIdx": 14,
  "startIdx": 0,
  "type": "Comment",
}
`;
